--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:name=".MainActivity"
             android:label="@string/app_name" 
             android:launchMode="singleTop"
-  			android:screenOrientation="portrait">
+  			android:screenOrientation="portrait"
+  			android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
