audiofocus disable search onbackpressed

--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -29,6 +29,15 @@
             </intent-filter>
         </activity>
         <service android:name="com.zezo.zezomusicplayer.MusicService" />
+        
+        <receiver android:name="RemoteControlReceiver">
+    <intent-filter>
+        <action android:name="android.intent.action.MEDIA_BUTTON" />
+    </intent-filter>
+</receiver>
+
     </application>
+    
+    
 
 </manifest>
