--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -4,10 +4,10 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-	
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -20,28 +20,36 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" 
+            android:label="@string/app_name"
             android:launchMode="singleTop"
-  			android:screenOrientation="fullSensor"
-  			android:windowSoftInputMode="stateHidden">
+            android:screenOrientation="fullSensor"
+            android:windowSoftInputMode="stateHidden"
+            android:configChanges="orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+                <!--
+                <action android:name="android.bluetooth.device.action.ACL_CONNECTED" />
+                <action android:name="android.bluetooth.device.action.ACL_DISCONNECT_REQUESTED" />
+                <action android:name="android.bluetooth.device.action.ACL_DISCONNECTED" />
+                -->
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.DEFAULT" />
-                
             </intent-filter>
         </activity>
-        
-        <service android:name="com.zezo.zezomusicplayer.MusicService" />
-        <receiver android:name="RemoteControlReceiver">
-        <action android:name="android.intent.action.MEDIA_BUTTON" />
-         <action android:name="android.intent.action.RECOGNIZE_SPEECH" /> 
-        
-</receiver>
 
+        <service android:name="com.zezo.zezomusicplayer.MusicService" />
+
+        <receiver android:name="RemoteControlReceiver" >
+            <action android:name="android.intent.action.MEDIA_BUTTON" />
+            <action android:name="android.intent.action.RECOGNIZE_SPEECH" />
+        </receiver>
+
+        <intent-filter>
+            <action android:name="android.bluetooth.device.action.ACL_CONNECTED" />
+            <action android:name="android.bluetooth.device.action.ACL_DISCONNECT_REQUESTED" />
+            <action android:name="android.bluetooth.device.action.ACL_DISCONNECTED" />
+        </intent-filter>
     </application>
-    
-    
 
 </manifest>
