--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="fullSensor"
-            android:windowSoftInputMode="stateVisible"
+            android:windowSoftInputMode="stateHidden"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
