--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -9,12 +9,12 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
+<!--     <uses-sdk -->
+<!--         android:minSdkVersion="8" -->
+<!--         android:targetSdkVersion="15" /> -->
 
-<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -27,19 +27,19 @@
         android:theme="@style/MyTheme" >
         <activity
             android:name=".MainActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="fullSensor"
-            android:windowSoftInputMode="stateHidden"
-            android:configChanges="orientation|screenSize" >
+            android:windowSoftInputMode="stateHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <!--
+                
                 <action android:name="android.bluetooth.device.action.ACL_CONNECTED" />
                 <action android:name="android.bluetooth.device.action.ACL_DISCONNECT_REQUESTED" />
                 <action android:name="android.bluetooth.device.action.ACL_DISCONNECTED" />
-                -->
+               
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -52,11 +52,11 @@
             <action android:name="android.intent.action.RECOGNIZE_SPEECH" />
         </receiver>
 
-        <intent-filter>
-            <action android:name="android.bluetooth.device.action.ACL_CONNECTED" />
-            <action android:name="android.bluetooth.device.action.ACL_DISCONNECTED" />
-            <action android:name="android.bluetooth.device.action.ACL_DISCONNECT_REQUESTED" />
-        </intent-filter>
+<!--         <intent-filter> -->
+<!--             <action android:name="android.bluetooth.device.action.ACL_CONNECTED" /> -->
+<!--             <action android:name="android.bluetooth.device.action.ACL_DISCONNECTED" /> -->
+<!--             <action android:name="android.bluetooth.device.action.ACL_DISCONNECT_REQUESTED" /> -->
+<!--         </intent-filter> -->
     </application>
 
 </manifest>
