--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -23,12 +23,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label=""
         android:theme="@style/MyTheme" >
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="fullSensor"
             android:windowSoftInputMode="stateHidden" >
