--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -23,7 +23,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label=""
+        android:label="@string/app_name"
         android:theme="@style/MyTheme" >
         <activity
             android:name=".MainActivity"
