MediaButtonReceiver bug fix

--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -51,7 +51,7 @@
             <intent-filter android:priority="2147483647">
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
-            <!-- <action android:name="android.intent.action.RECOGNIZE_SPEECH" /> -->
+            <action android:name="android.intent.action.RECOGNIZE_SPEECH" />
             </receiver>
     </application>
 
