--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -56,6 +56,16 @@
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
         </receiver>
+        
+        <receiver android:name="ZezoWidgetProvider" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/zezo_appwidget_info" />
+        </receiver>
 
         <!-- <action android:name="android.intent.action.RECOGNIZE_SPEECH" /> -->
 
