--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zezo.zezomusicplayer"
-    android:versionCode="2"
-    android:versionName="0.9" >
+    package="com.zezo.music"
+    android:versionCode="3"
+    android:versionName="1.11" >
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -11,7 +11,7 @@
 
     <!-- Soft input delete button bug above target 13 and above min 8. -->
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="16"
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -19,11 +19,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/audiofrequency72"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/MyTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.zezo.music.MainActivity"
             android:configChanges="orientation|screenSize"
             android:label="Zezo"
             android:launchMode="singleTop"
@@ -37,7 +37,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.zezo.zezomusicplayer.MusicService" >
+        <service android:name="com.zezo.music.MusicService" >
             <intent-filter>
                 <action android:name="com.zezo.zezomusicplayer.MusicService.BIND" />
 
