implemented 3 tabbed view moved playlist to middle tab

--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:label="@string/app_name"
         android:theme="@style/MyTheme" >
         <activity
-            android:name="com.zezo.music.MainActivity"
+            android:name="com.zezo.music.MusicPlayerActivity"
             android:configChanges="orientation|screenSize"
             android:label="Zezo"
             android:launchMode="singleTop"
