--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -19,8 +19,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label=""
         android:theme="@style/MyTheme" >
         <activity
             android:name="com.zezo.music.MusicPlayerActivity"
