--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zezo.music"
-    android:versionCode="7"
-    android:versionName="1.15" >
+    android:versionCode="8"
+    android:versionName="1.16" >
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -50,7 +50,7 @@
         </service>
 
         <receiver
-            android:name="com.zezo.music.util.MediaButtonReceiver"
+            android:name="com.zezo.music.MediaButtonReceiver"
             android:enabled="true" >
             <intent-filter android:priority="2147483647" >
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
