--- a/ZezoMusicPlayer/AndroidManifest.xml
+++ b/ZezoMusicPlayer/AndroidManifest.xml
@@ -26,6 +26,15 @@
             android:launchMode="singleTop"
             android:screenOrientation="fullSensor"
             android:windowSoftInputMode="stateHidden" >
+            
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+            
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
