--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.1"
 
     defaultConfig {
-        applicationId "com.ayco.player"
+        applicationId "com.zezo.music"
         minSdkVersion 16
         targetSdkVersion 22
         compileOptions {
