--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ayco.player"
+    package="com.zezo.music"
     android:versionCode="178"
     android:versionName="1.78">
 
@@ -20,7 +20,7 @@
         android:theme="@style/MyTheme">
 
         <activity
-            android:name="com.ayco.player.MusicPlayerActivity"
+            android:name=".MusicPlayerActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTop"
@@ -43,10 +43,10 @@
 
         </activity>
 
-        <service android:name="com.ayco.player.MusicService">
+        <service android:name=".MusicService">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
-                <action android:name="com.ayco.player.MusicService.BIND" />
+                <action android:name="com.zezo.music.MusicService.BIND" />
                 <action android:name="android.bluetooth.device.action.ACL_CONNECTED" />
                 <action android:name="android.bluetooth.device.action.ACL_DISCONNECTED" />
                 <action android:name="android.bluetooth.device.action.ACL_DISCONNECT_REQUESTED" />
@@ -54,7 +54,7 @@
         </service>
 
         <receiver
-            android:name="com.ayco.player.MediaButtonReceiver"
+            android:name=".MediaButtonReceiver"
             android:enabled="true">
 
             <intent-filter android:priority="2147483647">
